...
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/movie_image"
        android:id="@+id/movie_title"
        android:gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:text="@string/text_movie_title"
        android:textColor="#000"
        android:textSize="19sp"
        android:textStyle="bold"
...
        android:id="@+id/container1"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movie_directiors"
            android:text="@string/text_list_movie_directors"
            android:textColor="@color/grey5"
            android:textSize="15sp"
            />

        <TextView
...
